task: add an install target

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,6 +8,11 @@ tasks:
     - go build -ldflags="-s -w"
     - task: lint
 
+  install:
+    - task: fmt
+    - go install -ldflags="-s -w"
+    - task: lint
+
   fmt:
     - goimports -w -l .
     - gofumpt -w -l .
