--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,3 +40,9 @@ jobs:
 
     - name: Vet
       run: go vet -v ./...
+
+    - name: Install staticcheck
+      run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+    - name: staticcheck
+      run: staticcheck ./...
