--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.20.4
 
     - name: Install govulncheck
-      run: go install golang.org/x/vuln/cmd/govulncheck
+      run: go install golang.org/x/vuln/cmd/govulncheck@latest
 
     - name: govulncheck
       run: govulncheck ./...
