--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: 1.20.4
+        check-latest: true
 
     - name: Install govulncheck
       run: go install golang.org/x/vuln/cmd/govulncheck@latest
