--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -16,8 +16,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v4
       with:
-        go-version: 1.20.4
-        check-latest: true
+        go-version: stable
 
     - name: Install govulncheck
       run: go install golang.org/x/vuln/cmd/govulncheck@latest
