--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,16 +16,14 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v4
       with:
-        go-version: 1.21.0
+        go-version: 1.22.0
 
     - name: Build
       run: go build -v ./...
 
-    - name: Install goimports
-      run: go install golang.org/x/tools/cmd/goimports@latest
-
-    - name: Install gofumpt
-      run: go install mvdan.cc/gofumpt@latest
+    - run: go install golang.org/x/tools/cmd/goimports@latest
+    - run: go install mvdan.cc/gofumpt@latest
+    - run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
     - name: Format
       run: goimports -w . && gofumpt -w .
@@ -42,9 +40,6 @@ jobs:
 
     - name: Vet
       run: go vet -v ./...
-
-    - name: Install staticcheck
-      run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
     - name: staticcheck
       run: staticcheck ./...
